...
        android:layout_height="64dp"
        android:layout_below="@id/otf_password"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="32dp"
        android:id="@+id/login_button"

        android:text="Login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_register"
        android:text="Don't have an account?"
        android:layout_centerHorizontal="true"
        android:id="@+id/tv_forgot"
        />

    <TextView
...
